Add lib.py to report

--- a/trabajo/redes.tex
+++ b/trabajo/redes.tex
@@ -318,13 +318,18 @@ Estando en esta situación, decidimos que la mejor manera de sobreponernos era o
 
 \begin{appendices}
 	
-	\section{Workflow de conversión y resultados}
-	\lstinputlisting[language=Python]{../workflow.py}
+\section{Workflow de conversión y resultados}
+\lstinputlisting[language=Python]{../workflow.py}
 \pagebreak
+
 \section{Obtención de datos en twitter}
 \lstinputlisting[language=Python]{../follow.py}
-\end{appendices}
+\pagebreak
 
+\section{Biblioteca con las funciones implementadasa}
+\lstinputlisting[language=Python]{../lib/lib.py}
+
+\end{appendices}
 
 
 \end{document}
